@@ -165,6 +165,10 @@ ifeq ($(TARGET_OS),aros)
 SW_BINARY:=hexen2$(exe_ext)
 GL_BINARY:=glhexen2$(exe_ext)
 endif
+ifeq ($(TARGET_OS),morphos)
+SW_BINARY:=hexen2$(exe_ext)
+GL_BINARY:=glhexen2$(exe_ext)
+endif
 
 #############################################################
 # Compiler flags
@@ -502,16 +506,35 @@ endif
 
 
 #############################################################
-# Amiga, MorphOS, etc. flags/settings and overrides:
-# DUMMY section : porters should fill in the blanks!.
+# MorphOS flags/settings and overrides:
 #############################################################
-
 ifeq ($(HOST_OS),morphos)
-CFLAGS += -noixemul
+
 LDFLAGS += -noixemul
+
+USE_CODEC_VORBIS=yes
+USE_CODEC_MP3=no
+
+ifeq ($(USE_SOUND),yes)
+ifneq ($(USE_SDLAUDIO),yes)
+CPPFLAGS+= -DNO_SDL_AUDIO
+endif
 endif
 
-# End of Amiga settings
+ifeq ($(USE_CDAUDIO),yes)
+ifeq ($(USE_SDLCD),yes)
+CPPFLAGS+= -DWITH_SDLCD
+endif
+endif
+
+# MorphOS builds rely on SDL:
+# SDLQUAKE must be defined for all SDL using platforms/targets
+CPPFLAGS+= -DSDLQUAKE
+CFLAGS  += $(SDL_CFLAGS)
+LDFLAGS += $(SDL_LIBS)
+
+endif
+# End of MorphOS settings
 #############################################################
 
 
@@ -563,7 +586,9 @@ lib_mp3dec=-lmpg123
 endif
 ifeq ($(VORBISLIB),vorbis)
 cpp_vorbisdec=
+ifneq ($(TARGET_OS),morphos)
 lib_vorbisdec=-lvorbisfile -lvorbis -logg
+endif
 endif
 ifeq ($(VORBISLIB),tremor)
 cpp_vorbisdec=-DVORBIS_USE_TREMOR
@@ -721,6 +746,9 @@ endif
 ifeq ($(TARGET_OS),aros)
 SYSOBJ_SND := snd_ahi.o snd_sdl.o
 endif
+ifeq ($(TARGET_OS),morphos)
+SYSOBJ_SND := snd_ahi.o snd_sdl.o
+endif
 # end of Sound objects
 endif
 
@@ -751,6 +779,10 @@ ifeq ($(TARGET_OS),aros)
 SYSOBJ_MIDI:= midi_nul.o
 CPPFLAGS += -D_NO_MIDIDRV
 endif
+ifeq ($(TARGET_OS),morphos)
+SYSOBJ_MIDI:= midi_nul.o
+CPPFLAGS += -D_NO_MIDIDRV
+endif
 # end of MIDI objects
 endif
 
@@ -772,6 +804,9 @@ ifeq ($(TARGET_OS),unix)
 SYSOBJ_CDA := cd_sdl.o cd_bsd.o cd_linux.o
 endif
 ifeq ($(TARGET_OS),aros)
+SYSOBJ_CDA := cd_sdl.o
+endif
+ifeq ($(TARGET_OS),morphos)
 SYSOBJ_CDA := cd_sdl.o
 endif
 # end of CDAudio objects
@@ -838,6 +873,14 @@ endif
 endif
 ifeq ($(TARGET_OS),aros)
 # aros clients use SDL:
+SYSOBJ_INPUT := in_sdl.o
+SYSOBJ_GL_VID:= gl_vidsdl.o
+SYSOBJ_SOFT_VID:= vid_sdl.o
+SYSOBJ_NET := net_bsd.o net_udp.o
+SYSOBJ_SYS := sys_amiga.o
+endif
+ifeq ($(TARGET_OS),morphos)
+# morphos clients use SDL:
 SYSOBJ_INPUT := in_sdl.o
 SYSOBJ_GL_VID:= gl_vidsdl.o
 SYSOBJ_SOFT_VID:= vid_sdl.o
