@@ -202,16 +202,25 @@ endif
 
 
 #############################################################
-# Amiga, MorphOS, etc. flags/settings and overrides:
-# DUMMY section : porters should fill in the blanks!.
+# MorphOS flags/settings and overrides:
+#############################################################
+ifeq ($(HOST_OS),morphos)
+
+LDFLAGS += -noixemul
+
+endif
+# End of MorphOS settings
 #############################################################
 
-ifeq ($(HOST_OS),morphos)
-CFLAGS += -noixemul
-LDFLAGS += -noixemul
-endif
 
-# End of Amiga settings
+#############################################################
+# AROS flags/settings and overrides:
+#############################################################
+ifeq ($(HOST_OS),aros)
+
+
+endif
+# End of AROS settings
 #############################################################
 
 
@@ -241,6 +250,9 @@ ifeq ($(TARGET_OS),unix)
 SYSOBJ_SYS = sys_unix.o
 endif
 ifeq ($(TARGET_OS),aros)
+SYSOBJ_SYS = sys_amiga.o
+endif
+ifeq ($(TARGET_OS),morphos)
 SYSOBJ_SYS = sys_amiga.o
 endif
 
